création de form login

--- a/HelloEvent_Frontend/angular.json
+++ b/HelloEvent_Frontend/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "HelloEvent_Front": {
+    "HelloEvent_Frontend": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/hello-event-front",
+            "outputPath": "dist/hello-event-frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -25,7 +25,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -60,10 +61,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "HelloEvent_Front:build:production"
+              "browserTarget": "HelloEvent_Frontend:build:production"
             },
             "development": {
-              "browserTarget": "HelloEvent_Front:build:development"
+              "browserTarget": "HelloEvent_Frontend:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +72,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "HelloEvent_Front:build"
+            "browserTarget": "HelloEvent_Frontend:build"
           }
         },
         "test": {
